--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "0.24.0",
     "bootstrap": "4.6.2",
     "moment": "2.29.4",
+    "pixi.js": "^7.2.4",
     "react": "18.2.0",
     "react-bootstrap": "2.1.2",
     "react-dom": "18.2.0",
@@ -35,16 +36,14 @@
   ],
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.1",
-    "stream-browserify": "3.0.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
-    "path-browserify": "1.0.1",
     "@types/jest": "26.0.15",
     "@types/node": "12.0.0",
-    "crypto-browserify": "3.12.0",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@types/react-router-dom": "5.1.7",
+    "crypto-browserify": "3.12.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-react": "1.1.7",
     "eslint-config-react-app": "7.0.1",
@@ -57,10 +56,12 @@
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "path-browserify": "1.0.1",
     "prettier": "2.7.1",
     "react-app-rewired": "2.2.1",
     "react-scripts": "5.0.1",
     "sass": "1.55.0",
+    "stream-browserify": "3.0.0",
     "typescript": "4.1.2"
   },
   "resolutions": {
